fixed cover on small screens

--- a/components/GamePlaceHolder/styles.module.scss
+++ b/components/GamePlaceHolder/styles.module.scss
@@ -13,3 +13,6 @@
   font-weight: 500;
   letter-spacing: 0.2rem;
 }
+.cover {
+  min-width: 170px;
+}
